--- a/pom.xml
+++ b/pom.xml
@@ -1,43 +1,56 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.gamergeo.lib</groupId>
 	<artifactId>gamlib</artifactId>
-	<version>${revision}</version>
-	<packaging>jar</packaging>
+	<version>0.1.3</version>
+	<packaging>pom</packaging>
+	
+	<modules>
+		<module>gamlib-mapper</module>
+	</modules>
   
 	<properties>
-		<revision>0.1.1</revision>
 		<java.version>21</java.version>
 	    <encoding>UTF-8</encoding>
     	<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
     	
-<!--		<spring.version>6.1.3</spring.version>	-->
+    	 <!-- Plugin version -->
     	<maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
-<!--    	<flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>-->
-<!--		<javafx.version>21.0.1</javafx.version>-->
-<!--    	<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>-->
-<!--    	<maven.shade.plugin.version>3.5.1</maven.shade.plugin.version>-->
-<!--    	<jaxb-api.version>2.3.1</jaxb-api.version>-->
+    	
+    	 <!-- Bom version -->
+    	<gambom.version>1.0</gambom.version>
 	</properties>
 	
 	
 	<build>
-		<finalName>gamlib</finalName>
-	    <plugins>
-			<!-- java compiler (pour avoir la bonne version de java systématiquement -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven-compiler-plugin.version}</version>
-				<configuration>
-					<release>${java.version}</release>
-					<showDeprecation>true</showDeprecation>
-					<showWarnings>true</showWarnings>
-				</configuration>
-			</plugin>
-		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!-- java compiler (pour avoir la bonne version de java systématiquement -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${maven-compiler-plugin.version}</version>
+					<configuration>
+						<release>${java.version}</release>
+						<showDeprecation>true</showDeprecation>
+						<showWarnings>true</showWarnings>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
-			
+	
+	<dependencyManagement>
+		<dependencies>
+			<!-- Gamergeo BOM -->
+			<dependency>
+				<groupId>com.gamergeo.lib</groupId>
+				<artifactId>bom</artifactId>
+				<version>${gambom.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
