--- a/pom.xml
+++ b/pom.xml
@@ -3,43 +3,27 @@
 
 	<groupId>com.gamergeo.lib</groupId>
 	<artifactId>gamlib</artifactId>
-	<version>0.1.4</version>
-	<packaging>pom</packaging>
+	<version>0.1.5</version>
+	<packaging>jar</packaging>
 	
-	<modules>
-		<module>gamlib-mapper</module>
-	</modules>
+	<parent>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-parent</artifactId>
+	    <version>3.2.2</version>
+	</parent>
+	
+<!--	<modules>-->
+<!--		<module>gamlib-mapper</module>-->
+<!--	</modules>-->
   
 	<properties>
 		<java.version>21</java.version>
 	    <encoding>UTF-8</encoding>
     	<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
     	
-    	 <!-- Plugin version -->
-    	<maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
-    	
     	 <!-- Bom version -->
     	<gambom.version>1.0</gambom.version>
 	</properties>
-	
-	
-	<build>
-		<pluginManagement>
-			<plugins>
-				<!-- java compiler (pour avoir la bonne version de java systématiquement -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>${maven-compiler-plugin.version}</version>
-					<configuration>
-						<release>${java.version}</release>
-						<showDeprecation>true</showDeprecation>
-						<showWarnings>true</showWarnings>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
 	
 	<dependencyManagement>
 		<dependencies>
@@ -53,4 +37,19 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	
+	<dependencies>
+		<dependency>
+		    <groupId>org.openjfx</groupId>
+		    <artifactId>javafx-graphics</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.openjfx</groupId>
+		    <artifactId>javafx-controls</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.openjfx</groupId>
+		    <artifactId>javafx-fxml</artifactId>
+		</dependency>
+	</dependencies>
 </project>
