--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.gamergeo.lib</groupId>
-	<artifactId>viewmodelfx</artifactId>
+	<artifactId>fxutils</artifactId>
 	<version>0.7.3</version>
 	<packaging>jar</packaging>
 	
@@ -19,6 +19,8 @@
     	
     	<!-- Dependency version -->
 		<javafx.version>21.0.1</javafx.version>
+    	<viewmodelfx.version>0.7.3</viewmodelfx.version>
+    	<mvvmfx.version>1.8.0</mvvmfx.version>
 	</properties>
 	
 	<dependencies>
@@ -46,9 +48,15 @@
 		    <scope>provided</scope>
 		</dependency>
 		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-data-jpa</artifactId>
+		    <groupId>de.saxsys</groupId>
+		    <artifactId>mvvmfx</artifactId>
+		    <version>${mvvmfx.version}</version>
 		    <scope>provided</scope>
-		</dependency>
+		</dependency>	
+<!--		<dependency>-->
+<!--		    <groupId>org.springframework.boot</groupId>-->
+<!--		    <artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--		    <scope>provided</scope>-->
+<!--		</dependency>-->
 	</dependencies>
 </project>
